--- a/home/css/home_style.css
+++ b/home/css/home_style.css
@@ -5,7 +5,7 @@
  * Time: 上午9:12
  */
 /*顶部部分*/
-header,.search,section{width: 10.3rem;padding:0;position: relative;margin: 0 auto;}
+header,.search,section{width: 10.3rem;padding:0;position: relative;margin: 0 auto;margin: 0;}
 header nav{height: .7rem;margin: 0 auto;}
 header nav{width: 99%;background: url(http://img1.lotour.com/2016/index/navbdbg.png) repeat-x 0 bottom;
 box-sizing: border-box;position: absolute;z-index: 99;
@@ -109,9 +109,9 @@ color: rgb(110,110,110);vertical-align:middle;
 .search .search_zonghe p a:hover{color:rgb(236, 105, 9);}
 /*主体内容*/
 section .index-s-item,section .index-b-item,section .index-ad-item{position: relative}
-section .index-s-item{height: 730px;background: mediumvioletred}
-section .index-s-item .index-h5{text-align: center;  font: 24px/30px 微软雅黑;  color: #676b6e;}
-section .index-s-item .index-p{text-align: center;  font: 14px/30px arial;  color: #b9b9b9;}
+section .index-s-item{height: 730px;background: mediumvioletred;margin-bottom: 80px;}
+section .index-h5{text-align: center;  font: 24px/30px 微软雅黑;  color: #676b6e;}
+section .index-p{text-align: center;  font: 14px/30px arial;  color: #b9b9b9;}
 section .index-s-item .index-list{width: 1000px;height: 285px;overflow: hidden;background: blue;margin: 0 auto;position: relative;margin-top: 20px;margin-bottom: 70px;}
 section .index-s-item .index-list ul{width:auto; position: absolute;left: -50px;}
 section .index-s-item .index-list ul li{width: 195px;height: 285px;border-radius: 5px;margin-right: 5px;float: left}
@@ -120,10 +120,10 @@ section .index-s-item .index-list ul li .txt{font: 12px/20px 微软雅黑;  colo
 section .index-s-item .index-list ul li .arcer{padding: 0 15px;}
 section .index-s-item .index-list ul li .arcer a img{border-radius: 100%; margin-right:8px;width: 30px;  height: 30px;}
 section .index-s-item .index-list ul li .arcer a:nth-of-type(4) img{margin: 0;border-radius: 0;}
-section .index-s-item .index-list ul li .img .i1,section .index-s-item .index-list ul li .img .i2
+section .i1,section .i2
 {
-    width: 195px;
-    height: 195px;
+    width: 100%;
+    height: 100%;
     display: block;
     background: url(http://img1.lotour.com/2016/index/ibg.png) repeat center center;
     position: absolute;
@@ -132,11 +132,11 @@ section .index-s-item .index-list ul li .img .i1,section .index-s-item .index-li
     transition: all 1s ease-in-out;
     background-size: contain;
 }
-section .index-s-item .index-list ul li .img .i1{top:0; }
-section .index-s-item .index-list ul li .img .i2{  bottom: 0px;  }
+section .i1{top:0; }
+section .i2{  bottom: 0px;  }
 section .index-s-item .index-list ul li .img:hover .i1{top: 195px;}
 section .index-s-item .index-list ul li .img:hover .i2{bottom: 195px;}
-section .index-s-item .index-list ul li .img em{display: block;position: absolute;top: 98px;left: 97.5px;margin-left: -47px;}
+section .index-s-item .index-list ul li .img em{display: block;position: absolute;top: 98px;left: 97.5px;margin-left: -47px;z-index: 99;}
 section .index-s-item .index-list ul li .img em span{    font: 20px/30px 微软雅黑;  text-align: center;  color: #FFF;}
 section .index-s-item .index-list .in_left,section .index-s-item .index-list .in_right{
     width:40px;height: 60px;background: rgba(0,0,0,.5);position: absolute;
@@ -144,8 +144,51 @@ section .index-s-item .index-list .in_left,section .index-s-item .index-list .in
     cursor: pointer;
 }
 section .index-s-item .index-list .in_right{right: 0;}
-
-
-
-
-
+/*专业评价*/
+section .index-b-item{height: 1050px;background: greenyellow;margin-bottom: 80px;}
+section .index-b-item h5 a{color: #676b6e;}
+section .index-b-item .index-b-list{height: 970px;width: 1000px;background: aquamarine;margin: 0 auto;}
+section .index-b-item .index-b-list ul{width: auto;overflow: hidden;}
+section .index-b-item .index-b-list ul li{width: 245px;height: 440px;margin-right: 5px;float: left;overflow: hidden;border-radius: 5px;position: relative}
+section .index-b-item .index-b-list ul li .img {display:block;border-radius: 5px;width: 245px;height: 245px;overflow: hidden;position: relative}
+section .index-b-item .index-b-list ul li .img em{display: block;position: absolute;top: 122.5px;margin-top: -21px;
+    left:122.5px;margin-left: -61px;z-index: 99;}
+section .index-b-item .index-b-list ul li .img em .t2{text-align: center;font-family: 微软雅黑; font-size: 21px;color: white;
+     display: block;
+}
+section .index-b-item .index-b-list ul li:hover .i1{top:295px;}
+section .index-b-item .index-b-list ul li:hover .i2{bottom: 295px;}
+section .index-b-item .index-b-list ul li .rk{position: absolute;top: 210px;z-index: 100;display: none}
+section .index-b-item .index-b-list ul li .rk a{  font: 12px/17px 微软雅黑;  color: #eee;  border: 1px solid #eee;  padding: 0 8px;  margin-left: 14px;
+    border-radius: 3px;  opacity: 0.8;  margin-bottom: 5px;
+}
+section .index-b-item .index-b-list ul li:hover .rk{display: block;}
+section .index-b-item .index-b-list ul li .rk a:hover{background:rgb(236, 105, 9); color: white}
+section .index-b-item .index-b-list ul li h5{height: 30px;  overflow: hidden;  padding: 0 10px;margin-top: 5px;}
+section .index-b-item .index-b-list ul li h5 a{color: #555;font-size: 16px;font-weight: normal;}
+section .index-b-item .index-b-list ul li .tool{padding-left: 5px;}
+section .index-b-item .index-b-list ul li .tool a,section .index-b-item .index-b-list ul li .tool .icon-yanjing,section .index-b-item .index-b-list ul li .tool .icon-dingwei
+{color: rgb(177,177,177);
+font-family: 微软雅黑;display: inline-block;font-size: 14px;
+}
+section .index-b-item .index-b-list ul li .tool a:hover{color: rgb(236, 105, 9)}
+section .index-b-item .index-b-list ul li .tool .icon-yanjing{margin-left: 10px;}
+section .index-b-item .index-b-list ul li .rter img{float: left;  width: 30px;  height: 30px;  border-radius: 100%;  margin-left:20px;}
+section .index-b-item .index-b-list ul li .rter .p{width: 135px;height: 57px;float: left;margin-left: 5px;}
+section .index-b-item .index-b-list ul li .rter .p a{color: #818181;font-size: 14px;}
+section .index-b-item .index-b-list ul li .rter .p a:hover{color: rgb(236,105,9)}
+section .index-b-item .index-b-list ul li .rter .p p{color: #b7b7b7;font-size: 12px;}
+/*广告推广*/
+section .index-ad-item{height: 474px;background: gold;}
+section .index-ad-item h5{ font-size: 16px;  line-height: 22px;  margin-bottom: 25px;}
+section .index-ad-item ul {width: 1000px;margin: 0 auto}
+section .index-ad-item ul li{width: 245px;height: 251px;float: left;margin-right: 5px;background: greenyellow;overflow: hidden}
+section .index-ad-item ul li .img {display: block;border-radius: 5px;position: relative;overflow: hidden}
+section .index-ad-item ul li .img img{width: 245px;height: 200px;display: block;border-radius: 5px;}
+section .index-ad-item ul li .img em{position: absolute;top: 100px;margin-top:-20px;left: 50px;
+    text-align: center;font-family: 微软雅黑; font-size: 21px;color: white;  display: block;z-index: 99;}
+section .index-ad-item ul li .img .adv{position: absolute;bottom: 0;right: 5px;overflow: hidden}
+section .index-ad-item ul li .img .adv p{    font: 12px/18px 微软雅黑;  color: #818181;  text-align: center;background: rgba(0,0,0,0.4);}
+section .index-ad-item ul li .adv-p{    font: 12px/18px 微软雅黑;  color: #818181;  text-align: center;  padding: 15px 0 0 0;}
+section .index-ad-item ul li .img:hover .i1{top:100px;}
+section .index-ad-item ul li .img:hover .i2{bottom: 100px;}
